--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ publish = false
 readme = "README.md"
 
 [dependencies]
+reqwest = { version = "0.12.1", features = ["blocking"] }
 libc = "0.2"
 serde_yaml = "0.9"
 serde = { version = "1", features = ["derive"] }
